# camera-location-system

./: .gitignore  README.md  pipeline.sh
camera-location-engine/: CMakeLists.txt  build.sh  main.cpp  run.sh
camera-location-engine/io/output/: output_sample.txt
camera-location-engine/src/: CMakeLists.txt
camera-location-engine/src/agent/: CMakeLists.txt  agent.cpp  agent.h  agent_constants.h
camera-location-engine/src/camera/: CMakeLists.txt  camera.cpp  camera.h  camera_constants.h
camera-location-engine/src/driver/: CMakeLists.txt  drive_constants.h  driver.cpp  driver.h
camera-location-engine/src/image/: CMakeLists.txt  image.cpp  image.h  image_constants.h
camera-location-engine/src/input/: CMakeLists.txt  input.cpp  input.h  input_constants.h
camera-location-engine/src/transformer/: CMakeLists.txt  transformer.cpp  transformer.h
camera-location-test/: CMakeLists.txt  build.sh  main.cpp  run.sh
camera-location-test/test/agent/: agent_test.cpp
camera-location-test/test/camera/: camera_test.cpp
camera-location-test/test/image/: image_test.cpp
camera-location-test/test/input/: input_test.cpp
camera-location-test/test/transformer/: transformer_test.cpp
